@@ -134,6 +134,17 @@
 					</xsd:appinfo>
 				</xsd:annotation>
 			</xsd:attribute>
+			<xsd:attribute name="ignoreDefaultModelOnRedirect" type="xsd:boolean">
+				<xsd:annotation>
+					<xsd:documentation><![CDATA[
+	By default the content of the "default" model is used both during rendering and redirect scenarios. 
+	Alternatively a controller method can declare a RedirectAttributes argument and use it to provide attributes for a redirect. 
+	Setting this flag to true ensures the "default" model is never used in a redirect scenario even if a RedirectAttributes argument is not declared.
+	Setting it to false means the "default" model may be used in a redirect if the controller method doesn't declare a RedirectAttributes argument.
+	The default setting is false but new applications should consider setting it to true.
+					]]></xsd:documentation>
+				</xsd:annotation>
+			</xsd:attribute>
 		</xsd:complexType>
 	</xsd:element>
 
