@@ -3,9 +3,9 @@
     xmlns:mvc="http://www.springframework.org/schema/mvc"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
-		http://www.springframework.org/schema/mvc http://www.springframework.org/schema/mvc/spring-mvc-3.0.xsd">
+		http://www.springframework.org/schema/mvc http://www.springframework.org/schema/mvc/spring-mvc-3.1.xsd">
 
-	<mvc:annotation-driven validator="validator"/>
+	<mvc:annotation-driven validator="validator" ignoreDefaultModelOnRedirect="true" />
 	
 	<bean id="validator" class="org.springframework.web.servlet.config.MvcNamespaceTests$TestValidator" />
 	
